# adora-rs

./: Cargo.toml  readme.md
.github/workflows/: rust-test.yml
src/: data_types.rs  en-US.ftl  genius.rs  ko.ftl  main.rs  translation.rs
src/httpapi/: main.rs
translations/: en-US.ftl  ko.ftl
