[package]
name = "adora-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.16.0"
inline_colorization = "0.1.6"
intl-memoizer = "0.5.1"
poise = "0.5.7"
reqwest = "0.11.22"
serenity = "0.12.0"
tokio = {version = "1.35.1", features = ["full"]}
tracing = "0.1.40"
