[package]
name = "adora-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix_block_ai_crawling = "0.2.8"
arguments = "0.7.2"
fluent = "0.16.0"
google-youtube3 = "5.0.3"
inline_colorization = "0.1.6"
intl-memoizer = "0.5.1"
poise = "0.5.7"
reqwest = {version = "0.11.22", features = ["gzip","brotli","rustls-tls"]}
scylla = "0.10.1"
serde = {version = "1.0.196",features = ["derive"]}
serde_json = "1.0.113"
serenity = "0.12.0"
tokio = {version = "1.35.0", features = ["full"]}
tracing = "0.1.36"
url = "2.5.0"

[[bin]]
name = "adora_http_api"
path = "src/httpapi/main.rs"

[[bin]]
name = "discord"
path = "src/main.rs"
